final commmi before hosting stanza

--- a/public/stylesheets/user-styles/main.css
+++ b/public/stylesheets/user-styles/main.css
@@ -2131,8 +2131,8 @@ input.num-product::-webkit-inner-spin-button {
     TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 ==================================================================*/
 .cl0 {color: #fff;}
-.cl1 {color: #717fe0;}
-.cl2 {color: #333;}
+.cl1 {color: #373f72;}
+.cl2 {color: rgb(49, 164, 209);}
 .cl3 {color: #666;}
 .cl4 {color: #999;}
 .cl5 {color: #222;}
