--- a/views/users/orderdetails.hbs
+++ b/views/users/orderdetails.hbs
@@ -102,7 +102,7 @@ a {
                 <td>
                   <div class="d-flex mb-2">
                     <div class="flex-shrink-0">
-                      <img src="/images/products/{{this.productID.images.[0]}}" alt="" width="50" class="img-fluid">
+                      <img src="/images/products/{{this.items.images.[0]}}" alt="" width="50" class="img-fluid">
                     </div>
                     <div class="flex-lg-grow-1 ms-3 ml-3 d-flex align-items-center">
                       <h6 class="medium mb-0"><a href="#" class="text-reset">{{this.items.name}}</a></h6>
