--- a/views/users/wishListPage.hbs
+++ b/views/users/wishListPage.hbs
@@ -1,120 +1,128 @@
+<!-- breadcrumb -->
+<div class="container">
+	<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
+		<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+			Home
+			<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+		</a>
 
-
-	<!-- breadcrumb -->
-	<div class="container">
-		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
-				Home
-				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-			</a>
-
-			<span class="stext-109 cl4">
-				Shoping Cart
-			</span>
-		</div>
-	</div>
-		
-
-	<!-- Shoping Cart -->
-	<form class="bg0 p-t-75 p-b-85">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
-					<div class="m-l-25 m-r--38 m-lr-0-xl">
-						<div class="wrap-table-shopping-cart">
-							<div class="d-flex justify-content-center mb-4">
-							<h4 style="text-decoration: underline;" class="text-center">Wish Lists</h4><i style="font-size: 25px; color:aqua"  class="zmdi zmdi-favorite-outline" aria-hidden="true"></i>
-							</div>
-						
-							<table class="table-shopping-cart">
-								<tr class="table_head">
-									<th class="column-1">Product</th>
-									<th class="column-2"></th>
-									<th class="column-3">Price</th>
-									{{!-- <th class="column-4">Quantity</th> --}}
-									<th class="column-5">Remove</th>
-									<th class="column-5">Purchase</th>
-								</tr>
-								{{#each pro}}
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="/images/products/{{this.items.images.[0]}}" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">{{this.items.name}}</td>
-									<td class="column-3">₹{{this.items.sellingPrice}}</td>
-									{{!-- <td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
-
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
-
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td> --}}
-									<td class="column-5"><a onclick="removeFromwishList('{{this.items._id}}')" ><h2><i class="fa fa-trash" aria-hidden="true"></i></h2></a></td>
-									<td><a href="/add-to-cart/{{this.items._id}}"
-								class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
-								Add to cart
-							</a></td>
-								</tr>
-								{{/each}}
-
-								{{!-- <tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/item-cart-05.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">Lightweight Jacket</td>
-									<td class="column-3">$ 16.00</td>
-									<td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
-
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product2" value="1">
-
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td>
-									<td class="column-5">$ 16.00</td>
-								</tr> --}}
-							</table>
-						</div>
-
-						<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-							<div class="flex-w flex-m m-r-20 m-tb-5">
-								{{!-- <input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code"> --}}
-									
-								{{!-- <div class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
-									Apply coupon
-								</div> --}}
-							</div>
-
-							{{!-- <div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-								Go To Cart
-							</div> --}}
-						</div>
-					</div>
-				</div>
-
-				
-			</div>
-		</div>
-	</form>
-		
-	<!-- Back to top -->
-	<div class="btn-back-to-top" id="myBtn">
-		<span class="symbol-btn-back-to-top">
-			<i class="zmdi zmdi-chevron-up"></i>
+		<span class="stext-109 cl4">
+			Shoping Cart
 		</span>
 	</div>
+</div>
+
+
+<!-- Shoping Cart -->
+<form class="bg0 p-t-75 p-b-85">
+	<div class="container" style="
+    height: 65vh;">
+		<div class="row">
+			<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
+				<div class="m-l-25 m-r--38 m-lr-0-xl">
+					<div class="wrap-table-shopping-cart">
+						<div class="d-flex justify-content-center mb-4">
+							<h4 style="text-decoration: underline;" class="text-center">Wish Lists</h4><i
+								style="font-size: 25px; color:aqua" class="zmdi zmdi-favorite-outline"
+								aria-hidden="true"></i>
+						</div>
+
+						<table class="table-shopping-cart">
+							<tr class="table_head">
+								<th class="column-1">Product</th>
+								<th class="column-2"></th>
+								<th class="column-3">Price</th>
+								{{!-- <th class="column-4">Quantity</th> --}}
+								<th class="column-5">Remove</th>
+								<th class="column-5">Purchase</th>
+							</tr>
+							{{#each pro}}
+							<tr class="table_row">
+								<td class="column-1">
+									<div class="how-itemcart1">
+										<img src="/images/products/{{this.items.images.[0]}}" alt="IMG">
+									</div>
+								</td>
+								<td class="column-2">{{this.items.name}}</td>
+								<td class="column-3">₹{{this.items.sellingPrice}}</td>
+								{{!-- <td class="column-4">
+									<div class="wrap-num-product flex-w m-l-auto m-r-0">
+										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-minus"></i>
+										</div>
+
+										<input class="mtext-104 cl3 txt-center num-product" type="number"
+											name="num-product1" value="1">
+
+										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-plus"></i>
+										</div>
+									</div>
+								</td> --}}
+								<td class="column-5"><a onclick="removeFromwishList('{{this.items._id}}')">
+										<h2><i class="fa fa-trash" aria-hidden="true"></i></h2>
+									</a></td>
+								<td><a href="/add-to-cart/{{this.items._id}}"
+										class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn1 p-lr-15 trans-04 js-addcart-detail">
+										Add to cart
+									</a></td>
+							</tr>
+							{{/each}}
+
+							{{!-- <tr class="table_row">
+								<td class="column-1">
+									<div class="how-itemcart1">
+										<img src="images/item-cart-05.jpg" alt="IMG">
+									</div>
+								</td>
+								<td class="column-2">Lightweight Jacket</td>
+								<td class="column-3">$ 16.00</td>
+								<td class="column-4">
+									<div class="wrap-num-product flex-w m-l-auto m-r-0">
+										<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-minus"></i>
+										</div>
+
+										<input class="mtext-104 cl3 txt-center num-product" type="number"
+											name="num-product2" value="1">
+
+										<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<i class="fs-16 zmdi zmdi-plus"></i>
+										</div>
+									</div>
+								</td>
+								<td class="column-5">$ 16.00</td>
+							</tr> --}}
+						</table>
+					</div>
+
+					<div class="flex-w flex-sb-m bor15 p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
+						<div class="flex-w flex-m m-r-20 m-tb-5">
+							{{!-- <input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text"
+								name="coupon" placeholder="Coupon Code"> --}}
+
+							{{!-- <div
+								class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5">
+								Apply coupon
+							</div> --}}
+						</div>
+
+						{{!-- <div
+							class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
+							Go To Cart
+						</div> --}}
+					</div>
+				</div>
+			</div>
+
+
+		</div>
+	</div>
+</form>
+
+<!-- Back to top -->
+<div class="btn-back-to-top" id="myBtn">
+	<span class="symbol-btn-back-to-top">
+		<i class="zmdi zmdi-chevron-up"></i>
+	</span>
+</div>
