--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,157 +1,192 @@
-
 <header class="main">
-		<!-- Header desktop -->
-		<div class="container-menu-desktop">
-			<!-- Topbar -->
-			<div class="top-bar">
-				<div class="content-topbar flex-sb-m h-full container">
-					<div class="left-top-bar">
-						{{!-- Free shipping for standard order over $100 --}}
-					</div>
-
-					<div class="right-top-bar flex-w h-full">
-						
-						{{#if login}}
-						<a href="/user-profile" class="flex-c-m trans-04 p-lr-25">
-							My Account
-						</a>
-
-						<a href="/logout" class="flex-c-m trans-04 p-lr-25">
-							Log Out
-						</a>
-						{{else}}
-						
-						<a href="/signIn" class="flex-c-m trans-04 p-lr-25">
-							Sign In
-						
-						</a>
-						{{/if}}
-					
-					</div>
+	<!-- Header desktop -->
+	<div class="container-menu-desktop">
+		<!-- Topbar -->
+		<div class="top-bar">
+			<div class="content-topbar flex-sb-m h-full container">
+				<div class="left-top-bar">
+					{{!-- Free shipping for standard order over $100 --}}
 				</div>
-			</div>
 
-			<div class="wrap-menu-desktop">
-				<nav class="limiter-menu-desktop container">
-					
-					<!-- Logo desktop -->		
-					<a href="/" class="logo">
-						<img src="/images/stanza logo1.png" alt="IMG-LOGO">
+				<div class="right-top-bar flex-w h-full">
+
+					{{#if login}}
+					<a href="/user-profile" class="flex-c-m trans-04 p-lr-25">
+						My Account
 					</a>
 
-					<!-- Menu desktop -->
-					<div class="menu-desktop">
-						<ul class="main-menu">
-							<li class="active-menu">
-								<a href="/" class="nav-text" style="color: rgb(77, 174, 216);">Home</a>
-						
-							</li>
+					<a href="/logout" class="flex-c-m trans-04 p-lr-25">
+						Log Out
+					</a>
+					{{else}}
 
-							<li>
-								<a href="/" style="color: rgb(77, 174, 216);">Shop</a>
-							</li>
+					<a href="/signIn" class="flex-c-m trans-04 p-lr-25">
+						Sign In
 
-							
-						</ul>
-					</div>	
+					</a>
+					{{/if}}
 
-					<!-- Icon header -->
-					<div class="wrap-icon-header flex-w flex-r-m">
-						
-						</div>
-						{{#if login}}
-							
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" style="color: rgb(77, 174, 216);" data-notify="{{cartCount}}">
-					<a href="/goToCart"><i class="zmdi zmdi-shopping-cart"></i></a>
-					<span  id="checkout_items"></span>
 				</div>
-						<a href="/wishlist" style="color: rgb(37, 127, 163);" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
-							<i class="zmdi zmdi-favorite-outline"></i>
-						</a>
-						{{/if}}
-					</div>
-				</nav>
-			</div>	
+			</div>
 		</div>
 
-		<!-- Header Mobile -->
-		<div class="wrap-header-mobile">
-			<!-- Logo moblie -->		
-			<div class="logo-mobile">
-				<a href="/"><img src="/images/stanza logo1.png" alt="IMG-LOGO"></a>
-			</div>
+		<div class="wrap-menu-desktop">
+			<nav class="limiter-menu-desktop container">
 
-			<!-- Icon header -->
-			<div class="wrap-icon-header flex-w flex-r-m m-r-15">
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
-					<i class="zmdi zmdi-search"></i>
+				<!-- Logo desktop -->
+				<a href="/" class="logo">
+					<img src="/images/stanza logo1.png" alt="IMG-LOGO">
+				</a>
+
+				<!-- Menu desktop -->
+				<div class="menu-desktop">
+					<ul class="main-menu">
+						<li class="active-menu">
+							<a href="/" class="nav-text" style="color: rgb(77, 174, 216);">Home</a>
+
+						</li>
+
+						<li>
+							<a href="/" style="color: rgb(77, 174, 216);">Shop</a>
+						</li>
+
+
+					</ul>
+				</div>
+
+				<!-- Icon header -->
+				<div class="wrap-icon-header flex-w flex-r-m">
+
 				</div>
 				{{#if login}}
-				<div onload="count()" class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"  data-notify="">
-					<i class="zmdi zmdi-shopping-cart"></i>
-					<span  id="checkout_items"></span>
-				</div>
-				{{else}}
-				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="">
-					<i class="zmdi zmdi-shopping-cart"></i>
-				</div>
-				{{/if}}
 
-				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
+				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
+					style="color: rgb(77, 174, 216);" data-notify="{{cartCount}}">
+					<a href="/goToCart"><i class="zmdi zmdi-shopping-cart"></i></a>
+					<span id="checkout_items"></span>
+				</div>
+				<a href="/wishlist" style="color: rgb(37, 127, 163);"
+					class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti"
+					data-notify="">
 					<i class="zmdi zmdi-favorite-outline"></i>
 				</a>
-			</div>
-
-			<!-- Button show menu -->
-			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
-				<span class="hamburger-box">
-					<span class="hamburger-inner"></span>
-				</span>
-			</div>
+				{{/if}}
 		</div>
+		</nav>
+	</div>
+	</div>
 
 
-		<!-- Menu Mobile -->
-		<div class="menu-mobile">
-			<ul class="main-menu-m">
-				<li>
-					<a href="/">Home</a>
-					
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
+	<!-- Header Mobile -->
+	<div class="wrap-header-mobile">
+		<!-- Logo moblie -->
+		<div class="logo-mobile">
+			<a href="/"><img src="/images/stanza logo1.png" alt="IMG-LOGO"></a>
+		</div>
+		<!-- Menu desktop -->
+		<div class="menu-desktop">
+			<ul class="main-menu">
+				<li class="active-menu">
+					<a href="/" class="nav-text" style="color: rgb(77, 174, 216);">Home</a>
+
 				</li>
 
 				<li>
-					<a href="product.html">Shop</a>
+					<a href="/" style="color: rgb(77, 174, 216);">Shop</a>
 				</li>
-
 				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
+					<a href="/signIn" style="color: rgb(77, 174, 216);">Sign In</a>
 				</li>
 
-				
+
 			</ul>
 		</div>
 
-		<!-- Modal Search -->
-		<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
-			<div class="container-search-header">
-				<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
-					<img src="photos/icons/icon-close2.png" alt="CLOSE">
-				</button>
+		{{#if login}}
 
-				<form class="wrap-search-header flex-w p-l-15">
-					<button class="flex-c-m trans-04">
-						<i class="zmdi zmdi-search"></i>
-					</button>
-					<input class="plh3" type="text" name="search" placeholder="Search...">
-				</form>
-			</div>
+		<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
+			style="color: rgb(77, 174, 216);" data-notify="{{cartCount}}">
+			<a href="/goToCart"><i class="zmdi zmdi-shopping-cart"></i></a>
+			<span id="checkout_items"></span>
 		</div>
-	</header>
+		<a href="/wishlist" style="color: rgb(37, 127, 163);"
+			class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="">
+			<i class="zmdi zmdi-favorite-outline"></i>
+		</a>
+		{{/if}}
+		{{!--
+		<!-- Icon header -->
+		{{#if login}}
+		<div onload="count()" class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart"
+			data-notify="">
+			<i class="zmdi zmdi-shopping-cart"></i>
+			<span id="checkout_items"></span>
+		</div>
+		{{else}}
+		<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="">
+			<i class="zmdi zmdi-shopping-cart"></i>
+		</div>
+		{{/if}}
 
-{{!-- <script>
+		<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti"
+			data-notify="0">
+			<i class="zmdi zmdi-favorite-outline"></i>
+		</a> --}}
+
+	</div>
+
+	<!-- Button show menu -->
+	<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
+		<span class="hamburger-box">
+			<span class="hamburger-inner"></span>
+		</span>
+	</div>
+	</div>
+
+
+	<!-- Menu Mobile -->
+	<div class="menu-mobile">
+		<ul class="main-menu-m">
+			<li>
+				<a href="/">Home</a>
+
+				<span class="arrow-main-menu-m">
+					<i class="fa fa-angle-right" aria-hidden="true"></i>
+				</span>
+			</li>
+
+			<li>
+					<a href="/" style="color: rgb(77, 174, 216);">Shop</a>
+				</li>
+				<li>
+					<a href="/signIn" style="color: rgb(77, 174, 216);">Sign In</a>
+				</li>
+
+			
+
+
+		</ul>
+	</div>
+
+	<!-- Modal Search -->
+	<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
+		<div class="container-search-header">
+			<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
+				<img src="photos/icons/icon-close2.png" alt="CLOSE">
+			</button>
+
+			<form class="wrap-search-header flex-w p-l-15">
+				<button class="flex-c-m trans-04">
+					<i class="zmdi zmdi-search"></i>
+				</button>
+				<input class="plh3" type="text" name="search" placeholder="Search...">
+			</form>
+		</div>
+	</div>
+</header>
+
+{{!--
+<script>
     /*document.addEventListener('DOMContentLoaded',count);
     function count(){
             axios({
@@ -171,4 +206,4 @@
                 console.log(response)
             });
     }
-  </script> --}}
+</script> --}}
