--- a/views/users/cartPage.hbs
+++ b/views/users/cartPage.hbs
@@ -15,7 +15,8 @@
 	</div>
 </div>
 <form class="bg0 p-t-75 p-b-85">
-	<div class="container">
+	<div class="container" style="
+    height: 65vh;">
 		<div class="row">
 			<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50">
 				<div class="m-l-25 m-r--38 m-lr-0-xl">
