--- a/views/admin/admin-home.hbs
+++ b/views/admin/admin-home.hbs
@@ -1,6 +1,6 @@
 
 
-            <!-- Sale & Revenue Start -->
+            {{!-- <!-- Sale & Revenue Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
                     <div class="col-sm-6 col-xl-3">
@@ -41,13 +41,13 @@
                     </div>
                 </div>
             </div>
-            <!-- Sale & Revenue End -->
+            <!-- Sale & Revenue End --> --}}
 
 
             <!-- Sales Chart Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
-                    <div class="col-sm-12 col-xl-6">
+                    <div class="col-sm-12 col-xl-12">
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Worldwide Sales</h6>
@@ -56,7 +56,7 @@
                             <canvas id="worldwide-sales"></canvas>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-xl-6">
+                    <div class="col-sm-12 col-xl-12">
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
                                 <h6 class="mb-0">Salse & Revenue</h6>
@@ -70,7 +70,7 @@
             <!-- Sales Chart End -->
 
 
-            <!-- Recent Sales Start -->
+            {{!-- <!-- Recent Sales Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="bg-secondary text-center rounded p-4">
                     <div class="d-flex align-items-center justify-content-between mb-4">
@@ -141,10 +141,10 @@
                     </div>
                 </div>
             </div>
-            <!-- Recent Sales End -->
+            <!-- Recent Sales End --> --}}
 
 
-            <!-- Widgets Start -->
+            {{!-- <!-- Widgets Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
                     <div class="col-sm-12 col-md-6 col-xl-4">
@@ -263,7 +263,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Widgets End -->
+            <!-- Widgets End --> --}}
 
 
             <!-- Footer Start -->
@@ -271,12 +271,12 @@
                 <div class="bg-secondary rounded-top p-4">
                     <div class="row">
                         <div class="col-12 col-sm-6 text-center text-sm-start">
-                            &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a href="#">stanZa shop</a>, All Right Reserved. 
                         </div>
                         <div class="col-12 col-sm-6 text-center text-sm-end">
                             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                            <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                            Designed By <a href="https://htmlcodex.com">Aravind Balan</a>
+                            <br>Distributed By: <a href="https://themewagon.com" target="_blank">stanZa</a>
                         </div>
                     </div>
                 </div>
