--- a/views/admin/admin-loginPage.hbs
+++ b/views/admin/admin-loginPage.hbs
@@ -21,3 +21,15 @@
 			</div>
 			
 	</div>
+	<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
+  </script>
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js">
+  </script>
+<script>
+  $("#form").validate()
+  //dksjhsf
+</script>
